--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "@vitejs/plugin-vue": "^4.0.0",
         "@vue/server-renderer": "^3.2.31",
         "autoprefixer": "^10.4.7",
-        "axios": "^1.1.2",
+        "axios": "^1.7.7",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
@@ -20,6 +20,6 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
-        "sweetalert2": "^11.14.1"
+        "vue3-carousel": "^0.3.4"
     }
 }
